<resources>
    <string name="app_name">Selfzen</string>
    <string name="register_to_selfzen">Register To Selfzen</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="_07xxxxxxxx">07XXXXXXXX</string>
    <string name="be_smart_your_shopping_time">Be Smart Your Shopping Time</string>
    <string name="selfzen">Selfzen</string>
    <string name="todo">TODO</string>
</resources>