<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="288dp"
        android:layout_height="234dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="78dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/selfzen"
        android:textAlignment="center"
        android:textColor="#52796F"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/be_smart_your_shopping_time"
        android:textAlignment="center"
        android:textColor="#43A047"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_TP"
        android:layout_width="220dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_07xxxxxxxx"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="161dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/start_shopping"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_TP" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="174dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/register_to_selfzen"
        android:textAlignment="center"
        android:textColor="#52796F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>